[tool.poetry]
name = "PongProj"
version = "1.0.0"
description = "Pong with a twist"
authors = ["William Li <349887224@gapps.yrdsb.ca>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"